8023145: G1: G1CollectedHeap::mark_strong_code_roots() needs to handle ParallelGCThreads=0

Reviewed-by: stefank, mgerdin